--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -25,9 +25,8 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm ci
     - run: npm run build --if-present
-    - run: npm test
+    - run: npm test --if-present
     - name: JSDoc Action
       # You may pin to the exact commit or the version.
       # uses: andstor/jsdoc-action@2fb2b536605bdebace2b92abb0601155d5ddc688
