--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -53,7 +53,7 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: '14'
-      - run: npm ci # or yarn install
+      - run: yarn install
       - uses: sibiraj-s/action-eslint@v1
         with:
           eslintArgs: '--ignore-path=.gitignore --quiet'
