--- a/.github/workflows/main-pipeline.yml
+++ b/.github/workflows/main-pipeline.yml
@@ -25,6 +25,8 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
+        path: ./codebase/back-end_drop
+    - run: npm install
     - run: npm run build --if-present
     - run: npm test --if-present
     - name: JSDoc Action
