--- a/.github/workflows/main-pipeline.yml
+++ b/.github/workflows/main-pipeline.yml
@@ -25,10 +25,9 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
-        path: ./codebase/back-end_drop
+        path: ./codebase/back-end
     - run: npm install
-    - run: npm run build --if-present
-    - run: npm test --if-present
+    - run: npm test
     - name: JSDoc Action
       # You may pin to the exact commit or the version.
       # uses: andstor/jsdoc-action@2fb2b536605bdebace2b92abb0601155d5ddc688
