--- a/.github/workflows/main-pipeline.yml
+++ b/.github/workflows/main-pipeline.yml
@@ -27,7 +27,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm install
       working-directory: ./codebase/back-end
-    - run: npm test
+    - run: npm test --if-present
       working-directory: ./codebase/back-end
     - name: JSDoc Action
       # You may pin to the exact commit or the version.
