--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -5,6 +5,11 @@ name: CI/CD Pipeline
 
 on:
   push:
+    branches:
+      - back-end_drop
+      - front-end_drop
+      - ci/cd-pipeline-1
+    
   pull_request:
     branches:
       - main
@@ -12,13 +17,8 @@ on:
       - front-end_drop
 
 jobs:
-  build:
+  generate-docs:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [10.x, 12.x, 14.x, 15.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
     steps:
     - uses: actions/checkout@v2
     - name: JSDoc Action
@@ -34,6 +34,33 @@ jobs:
         recurse: true
         # The path to a Markdown file to be used as a the front page
         front_page: ./codebase/CI-CD-pipeline.md
+        
+  lint-codebase:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+      - run: yarn install
+      - uses: sibiraj-s/action-eslint@v1
+        with:
+          eslintArgs: '--ignore-path=.gitignore --quiet'
+          extensions: 'js,jsx,ts,tsx'
+          annotations: true
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    
+    
+  back-end-build:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [10.x, 12.x, 14.x, 15.x]
+        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+
+    steps:
+    - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v2
       with:
@@ -50,18 +77,13 @@ jobs:
         workdir: ./codebase/back-end
   
   
-  eslint:
+  front-end-build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
-        with:
-          node-version: '14'
-      - run: yarn install
-      - uses: sibiraj-s/action-eslint@v1
-        with:
-          eslintArgs: '--ignore-path=.gitignore --quiet'
-          extensions: 'js,jsx,ts,tsx'
-          annotations: true
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - uses: actions/checkout@v2
+    - name: JEST Report
+      uses: RedaktionsNetzwerk-Deutschland/action-jest-reporter@v1.0.0
+      with:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        json-glob: ./codebase/front-end/testOutput.json
+        workdir: ./codebase/front-end
