--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -75,14 +75,9 @@ jobs:
       runs-on: ubuntu-latest
       steps:
         - uses: actions/checkout@v2
-        - uses: actions/setup-node@v2
-          with:
-            node-version: '14'
         - run: yarn install
-        - uses: sibiraj-s/action-eslint@v1
+        - uses: stefanoeb/eslint-action@1.0.2
           with:
-            eslintArgs: '--ignore-path=.gitignore --quiet'
-            extensions: 'js,jsx,ts,tsx'
-            annotations: true
+            files: ./codebase/
           env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
