--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -76,6 +76,10 @@ jobs:
       steps:
         - uses: actions/checkout@v2
         - run: yarn install
+        - name: Run linters
+          uses: wearerequired/lint-action@v1
+          with:
+            eslint: true
         - uses: stefanoeb/eslint-action@1.0.2
           with:
             files: ./codebase/
