--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -79,6 +79,6 @@ jobs:
         - uses: stefanoeb/eslint-action@1.0.2
           with:
             files: ./codebase/
-            fix: true
+            arguments: "fix"
           env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
