--- a/codebase/back-end/package.json
+++ b/codebase/back-end/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "dotenv": "^9.0.0",
     "express": "^4.17.1",
-    "mongoose": "^5.12.7"
+    "mongoose": "^5.12.7",
+    "pouchdb": "^7.2.2"
   }
 }
