--- a/codebase/back-end/package.json
+++ b/codebase/back-end/package.json
@@ -13,7 +13,6 @@
     "dotenv": "^9.0.0",
     "express": "^4.17.1",
     "mongoose": "^5.12.7",
-    "nodemon": "^2.0.7",
-    "pouchdb": "^7.2.2"
+    "nodemon": "^2.0.7"
   }
 }
