--- a/codebase/front-end/package.json
+++ b/codebase/front-end/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js & nodemon ../back-end/index.js"
   },
   "author": "CSE 110 Team 11",
   "license": "ISC",
