--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -58,6 +58,18 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         json-glob: ./codebase/back-end/testOutput.json
         workdir: ./codebase/back-end
+    
+    - name: ESLint checker
+      # You may pin to the exact commit or the version.
+      # uses: ninosaurus/eslint-check@30ce7263e3f4b0bebc3cc06897bdf4ab8524a424
+      uses: ninosaurus/eslint-check@v5.3.1
+      with:
+      # github security token
+        #repo-token: ${{ secrets.GITHUB_TOKEN }}
+      # relative directory to node_modules
+      #custom-directory: 
+      # relative path to eslint config file eg. .eslintrc
+        eslint-config-path: ./eslintrc.js 
 
 
   front-end-build:
