--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -60,20 +60,19 @@ jobs:
         json-glob: ./codebase/back-end/testOutput.json
         workdir: ./codebase/back-end
     
-    - name: ESLint checker
-      run: npm run lint --if-present
-      #with:
-        #eslint-config-path: ./eslintrc.js
+    #- name: ESLint checker
+      #run: npm run lint --if-present
+    - name: ESLint Action eslintrc
       # You may pin to the exact commit or the version.
-      # uses: ninosaurus/eslint-check@30ce7263e3f4b0bebc3cc06897bdf4ab8524a424
-      #uses: ninosaurus/eslint-check@v5.3.1
-      #with:
-      # github security token
-        #repo-token: ${{ secrets.GITHUB_TOKEN }}
-      # relative directory to node_modules
-      #custom-directory: 
-      # relative path to eslint config file eg. .eslintrc
-        #eslint-config-path: ./eslintrc.js 
+      # uses: mrdivyansh/eslint-action@17eb59b7430afff999b822cb161ef44e9bd7a1cd
+      uses: mrdivyansh/eslint-action@v1.0.7
+      with:
+       # GitHub repository token for publishing inline lint annotations. Should be secrets.GITHUB_TOKEN.
+        repo-token: ${{ secrets.GITHUB_TOKEN }}
+        # Path to eslintrc
+        eslint-rc: ./eslintrc.js
+        # Root directory to lint files in
+        execute-on-files: ./codebase/back-end
 
 
   front-end-build:
