--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -60,7 +60,7 @@ jobs:
         json-glob: ./codebase/back-end/testOutput.json
         workdir: ./codebase/back-end
     
-    - name: ESLint checker
+    #- name: ESLint checker
       #run: npm run lint --if-present
     #- name: ESLint Action eslintrc
       # You may pin to the exact commit or the version.
@@ -85,7 +85,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         json-glob: ./codebase/front-end/testOutput.json
         workdir: ./codebase/front-end
-        
     - name: ESLint Action eslintrc
       # You may pin to the exact commit or the version.
       # uses: mrdivyansh/eslint-action@17eb59b7430afff999b822cb161ef44e9bd7a1cd
