--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -59,20 +59,8 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         json-glob: ./codebase/back-end/testOutput.json
         workdir: ./codebase/back-end
-    - name: ESLint Action eslintrc
-      # You may pin to the exact commit or the version.
-      # uses: mrdivyansh/eslint-action@17eb59b7430afff999b822cb161ef44e9bd7a1cd
-      uses: mrdivyansh/eslint-action@v1.0.7
-      with:
-       # GitHub repository token for publishing inline lint annotations. Should be secrets.GITHUB_TOKEN.
-        repo-token: ${{ secrets.GITHUB_TOKEN }}
-        # Path to eslintrc
-        eslint-rc: ./.eslintrc.js
-        # Root directory to lint files in
-        execute-on-files: ./codebase/back-end
-    
-    #- name: ESLint checker
-      #run: npm run lint --if-present
+    - name: ESLint checker
+      run: npm run lint --if-present
     #- name: ESLint Action eslintrc
       # You may pin to the exact commit or the version.
       # uses: mrdivyansh/eslint-action@17eb59b7430afff999b822cb161ef44e9bd7a1cd
@@ -81,9 +69,13 @@ jobs:
        # GitHub repository token for publishing inline lint annotations. Should be secrets.GITHUB_TOKEN.
         #repo-token: ${{ secrets.GITHUB_TOKEN }}
         # Path to eslintrc
-        #eslint-rc: ./eslintrc.js
+        #eslint-rc: ./.eslintrc.js
         # Root directory to lint files in
         #execute-on-files: ./codebase/back-end
+    
+    #- name: ESLint checker
+      #run: npm run lint --if-present
+
 
 
   front-end-build:
