--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -67,7 +67,7 @@ jobs:
       uses: mrdivyansh/eslint-action@v1.0.7
       with:
        # GitHub repository token for publishing inline lint annotations. Should be secrets.GITHUB_TOKEN.
-        repo-token: secrets.GITHUB_TOKEN
+        repo-token: ${{ secrets.GITHUB_TOKEN }}
         # Path to eslintrc
         eslint-rc: ./.eslintrc.js
         # Root directory to lint files in
