--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -102,12 +102,36 @@ jobs:
         
         
   ESLint Check on Codebase:
-       runs-on: ubuntu-latest
-       steps:
-         - uses: actions/checkout@v2
-         - run: yarn install
-         - uses: stefanoeb/eslint-action@1.0.2
-           with:
-             files: ./codebase/
-           env:
-             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    uses: mrdivyansh/eslint-action@v1.0.7
+      with:
+       # GitHub repository token for publishing inline lint annotations. Should be secrets.GITHUB_TOKEN.
+        repo-token: ${{ secrets.GITHUB_TOKEN }}
+        # Path to eslintrc
+        eslint-rc: ./.eslintrc.js
+        # Root directory to lint files in
+        execute-on-files: ./codebase/
+     #runs-on: ubuntu-latest
+      # steps:
+       #  - uses: actions/checkout@v2
+        # - run: yarn install
+         #- uses: stefanoeb/eslint-action@1.0.2
+          # with:
+           #  files: ./codebase/
+           #env:
+            # GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+             
+             
+             
+               #- name: ESLint checker
+      #run: npm run lint --if-present
+    #- name: ESLint Action eslintrc
+      # You may pin to the exact commit or the version.
+      # uses: mrdivyansh/eslint-action@17eb59b7430afff999b822cb161ef44e9bd7a1cd
+      #uses: mrdivyansh/eslint-action@v1.0.7
+     # with:
+       # GitHub repository token for publishing inline lint annotations. Should be secrets.GITHUB_TOKEN.
+        #repo-token: ${{ secrets.GITHUB_TOKEN }}
+        # Path to eslintrc
+        #eslint-rc: ./.eslintrc.js
+        # Root directory to lint files in
+        #execute-on-files: ./codebase/back-end
