try esLint separate

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -101,7 +101,7 @@ jobs:
         #execute-on-files: ./codebase/front-end
         
         
-  ESLint Check on Codebase:
+  -name: ESLint Check on Codebase:
     uses: mrdivyansh/eslint-action@v1.0.7
       with:
        # GitHub repository token for publishing inline lint annotations. Should be secrets.GITHUB_TOKEN.
