--- a/codebase/front-end/package.json
+++ b/codebase/front-end/package.json
@@ -4,7 +4,7 @@
   "description": "This is the front-end for CSE 110 Spring 2021 Team 11",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "nodemon server.js & nodemon ../back-end/index.js"
   },
   "author": "CSE 110 Team 11",
@@ -13,7 +13,16 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.3",
+    "@babel/preset-env": "^7.14.2",
+    "babel-jest": "^26.6.3",
+    "jest": "^26.6.3",
     "jest-puppeteer": "^5.0.3",
     "puppeteer": "^9.1.1"
-  }
+  },
+
+  "jest": {
+    "preset": "jest-puppeteer",
+    "verbose": true
+ }
 }
