--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -92,7 +92,7 @@ jobs:
     - run: npm install
       working-directory: ./codebase/front-end
     - run: npm test --if-present
-      working-directory: ./codebase/back-end
+      working-directory: ./codebase/front-end
     - name: JEST Report
       uses: RedaktionsNetzwerk-Deutschland/action-jest-reporter@v1.0.0
       with:
