--- a/codebase/front-end/components/package.json
+++ b/codebase/front-end/components/package.json
@@ -10,7 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "shadow-selection-polyfill": "^1.1.0"
+  },
+  "jest": {
+    "preset": "jest-puppeteer",
+    "verbose": true
   }
-  
-  
 }
