--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "devDependencies": {
+    "@babel/core": "^7.14.3",
+    "@babel/preset-env": "^7.14.4",
+    "babel-jest": "^27.0.2",
     "eslint": "^7.26.0",
+    "jest": "^27.0.4",
     "jest-puppeteer": "^5.0.3",
     "puppeteer": "^9.1.1"
   },
