--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -25,14 +25,18 @@ jobs:
     - name: JSDoc Action
       # You may pin to the exact commit or the version.
       # uses: andstor/jsdoc-action@2fb2b536605bdebace2b92abb0601155d5ddc688
-      uses: andstor/jsdoc-action@v1.2.0
+      uses: codevise/documentation-js-action@v1
       with:
+        input: ./codebase
+        output: ./codebaseDocs
+      # uses: andstor/jsdoc-action@v1.2.0
+      # with:
         # Source directory to build documentation from
-        source_dir: ./codebase
+        # source_dir: ./codebase
         # Output folder for the generated documentation
-        output_dir: ./codebaseDocs
+        # output_dir: ./codebaseDocs
         # Recurse into subdirectories when scanning for source files
-        recurse: true
+        # recurse: true
         # The path to a Markdown file to be used as a the front page
         front_page: ./codebase/CI-CD-pipeline.md
 
