--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "devDependencies": {
     "eslint": "^7.26.0",
     "jest-puppeteer": "^5.0.3",
+    "jsdoc": "^3.6.7",
     "puppeteer": "^9.1.1"
   },
   "jest": {
