--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -32,7 +32,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm install
-    - run: npm jsdoc
+    - run: npm run jsdoc
 
   back-end-build:
     runs-on: ubuntu-latest
