timeout for puppeteers

--- a/src/unitTests/package.json
+++ b/src/unitTests/package.json
@@ -16,6 +16,10 @@
     "jest": "^26.6.3",
     "jest-puppeteer": "^5.0.4",
     "puppeteer": "^9.1.1"
+  },
+  "jest": {
+    "preset": "jest-puppeteer",
+    "testing-environment": "jsdom",
+    "verbose": true
   }
-
 }
