--- a/src/back-end/package.json
+++ b/src/back-end/package.json
@@ -4,7 +4,7 @@
   "description": "This is the server for the CSE 110 Team 11 project for spring 2021",
   "main": "index.js",
   "scripts": {
-    "test": "jest --detectOpenHandles"
+    "test": "jest"
   },
   "author": "CSE 110 Team 11 Spring 2021",
   "license": "ISC",
