--- a/src/front-end/components/package.json
+++ b/src/front-end/components/package.json
@@ -9,8 +9,7 @@
   "author": "CSE 110 Team 11",
   "license": "ISC",
   "dependencies": {
+    "Buffer": "*",
     "shadow-selection-polyfill": "^1.1.0"
   }
-  
-  
 }
