--- a/src/front-end/package.json
+++ b/src/front-end/package.json
@@ -5,7 +5,9 @@
   "main": "server.js",
   "scripts": {
     "test": "jest",
-    "start": "nodemon server.js & nodemon ../back-end/index.js"
+    "start": "nodemon server.js",
+    "dev": "webpack serve --config webpack.dev.js --open --hot",
+    "build": "webpack --config webpack.prod.js"
   },
   "author": "CSE 110 Team 11",
   "license": "ISC",
@@ -15,10 +17,25 @@
   "devDependencies": {
     "@babel/core": "^7.14.3",
     "@babel/preset-env": "^7.14.4",
+    "@babel/preset-react": "^7.16.7",
     "babel-jest": "^26.6.3",
+    "babel-loader": "^8.2.4",
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^10.2.4",
+    "css-loader": "^6.7.1",
+    "css-minimizer-webpack-plugin": "^3.4.1",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.5.0",
     "jest": "^26.6.3",
     "jest-puppeteer": "^5.0.3",
-    "puppeteer": "^9.1.1"
+    "mini-css-extract-plugin": "^2.6.0",
+    "node-polyfill-webpack-plugin": "^1.1.4",
+    "puppeteer": "^9.1.1",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.72.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.8.1",
+    "webpack-merge": "^5.8.0"
   },
   "jest": {
     "preset": "jest-puppeteer",
