JSX Added plus deployment workflow fixes

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
         username: ${{secrets.SSH_USERNAME}} # user for Server
 
         script: |
-          cd /var/www/boojo.bitfrost.app/cse112-sp22-group
+          cd ./cse112-sp22-group
           git pull origin main
           cd  ./src/back-end/
           npm i
