--- a/.github/workflows/deploy-test.yml
+++ b/.github/workflows/deploy-test.yml
@@ -17,4 +17,5 @@ jobs:
         username: ${{secrets.SSH_USERNAME}} # user for Server
 
         script: |
+          cd cse112-sp22-group1
           ls
