--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,9 +17,9 @@ jobs:
         username: ${{secrets.SSH_USERNAME}} # user for Server
 
         script: |
-          cd ./cse112-sp22-group
+          cd ../var/www/boojo.bitfrost.app/cse112-sp22-group
           git pull origin main
-          cd  ./src/back-end/
+          cd  src/back-end/
           npm i
           cd ../front-end/prod/
           npm i
