fixes problems with npm root

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
           cd ../var/www/boojo.bitfrost.app/cse112-sp22-group1
           git pull origin main
           cd  src/back-end
-          PATH=$PATH:/${{secrets.SSH_USER_NAME}}/.npm-global/bin
+          PATH=$PATH:/${{secrets.SSH_USERNAME}}/.nvm/versions/node/v16.14.2/bin
           npm install
           cd ../front-end/prod
           npm install
