backend: change access-control-allow-origin header to use domain in prod
Adds a new constants.js and constants_prod.js files to the backend to
allow quick swapping of testing and production values. Changes the
deploy workflow to swap constants.js with constants_prod.js before
deploying to the server.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,8 @@ jobs:
           cd ../var/www/boojo.bitfrost.app/cse112-sp22-group1
           git pull origin main
           cd  src/back-end
+          rm constants.js
+          mv constants_prod.js constants.js
           PATH=$PATH:/${{secrets.SSH_USERNAME}}/.nvm/versions/node/v16.14.2/bin
           npm install
           cd ../front-end/prod
