--- a/.github/workflows/front-end-build.yml
+++ b/.github/workflows/front-end-build.yml
@@ -33,13 +33,17 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
+    - run:  |
+            echo "ORIGINALPROD=$(cat * prod/dist)" >> $GITHUB_ENV
+      working-directory: ./src/front-end
     - run: npm install
       working-directory: ./src/front-end
-    #- run: npm test --if-present
-      #working-directory: ./src/unitTests
-   # - name: JEST Report
-      #uses: RedaktionsNetzwerk-Deutschland/action-jest-reporter@v1.0.0
-     # with:
-        #GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-       #json-glob: ./src/unitTests/testOutput.json
-       # workdir: ./src/unitTests
+    - run: npm run build
+      working-directory: ./src/front-end
+    - run:  |
+            echo "NEWPROD=$(cat * prod/dist)" >> $GITHUB_ENV
+      working-directory: ./src/front-end
+    - if: env.ORIGINALPROD != env.NEWPROD
+      run:  |
+            echo You need to build before pushing
+            exit 1
