Fixes some issies with front-end build check with env formating

--- a/.github/workflows/front-end-build.yml
+++ b/.github/workflows/front-end-build.yml
@@ -34,14 +34,14 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run:  |
-            echo "ORIGINALPROD=$(cat * prod/dist)" >> $GITHUB_ENV
+            echo "ORIGINALPROD=$(cat * prod/dist | tr '\n' ' ')" >> $GITHUB_ENV
       working-directory: ./src/front-end
     - run: npm install
       working-directory: ./src/front-end
     - run: npm run build
       working-directory: ./src/front-end
     - run:  |
-            echo "NEWPROD=$(cat * prod/dist)" >> $GITHUB_ENV
+            echo "NEWPROD=$(cat * prod/dist | tr '\n' ' ')" >> $GITHUB_ENV
       working-directory: ./src/front-end
     - if: env.ORIGINALPROD != env.NEWPROD
       run:  |
