Fixes comparison in checker script

--- a/.github/workflows/front-end-build.yml
+++ b/.github/workflows/front-end-build.yml
@@ -83,7 +83,7 @@ jobs:
       working-directory: ./src/front-end
     - name: Checking application was built
       run:  |
-            if [[ ${{ env.ORIGINALPROD }} != ${{ env.NEWPROD}} ]]
+            if [[ "${{ env.ORIGINALPROD }}" != "${{ env.NEWPROD}}" ]]
             then
               echo You need to build before pushing
               exit 1
