--- a/.github/workflows/front-end-build.yml
+++ b/.github/workflows/front-end-build.yml
@@ -33,60 +33,21 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
-    - name: "Current_Prod"
+    - name: Installs dependencies
+      run: npm install
+      working-directory: ./src/front-end
+    - name: Builds project
+      run: npm run build
+      working-directory: ./src/front-end
+    - name: Checks git status
+      id: git
       run:  |
-            CURRENTPROD=""
-            for file in ./prod/dist/*; do
-              if  [ -d $file ]; then
-                for subdict in $file/*; do
-                  for element in $subdict/*; do
-                    CURRENTPROD="${CURRENTPROD}${element##*/}"
-                  done
-                done
-              else
-                if [[ $file == *.css ]] || [[ $file == *.html ]]
-                then
-                  NEWFILE=$(cat ${file} | tr '\n' ' ' | tr -dc '[:alnum:]\r')
-                  CURRENTPROD="${CURRENTPROD}${NEWFILE}"
-                else
-                  CURRENTPROD="${CURRENTPROD}${file##*/}"
-                fi
-              fi
-            done
-            echo "ORIGINALPROD=$CURRENTPROD" >> $GITHUB_ENV
-      working-directory: ./src/front-end
-    - run: npm install
-      working-directory: ./src/front-end
-    - run: npm run build
-      working-directory: ./src/front-end
-    - name: "Testing_Prod"
-      run:  |
-            CURRENTPROD=""
-            for file in ./prod/dist/*; do
-              if  [ -d $file ]; then
-                for subdict in $file/*; do
-                  for element in $subdict/*; do
-                    CURRENTPROD="${CURRENTPROD}${element##*/}"
-                  done
-                done
-              else
-                if [[ $file == *.css ]] || [[ $file == *.html ]]
-                then
-                  NEWFILE=$(cat ${file} | tr '\n' ' ' | tr -dc '[:alnum:]\r')
-                  CURRENTPROD="${CURRENTPROD}${NEWFILE}"
-                else
-                  CURRENTPROD="${CURRENTPROD}${file##*/}"
-                fi
-              fi
-            done
-            echo "NEWPROD=$CURRENTPROD" >> $GITHUB_ENV
-      working-directory: ./src/front-end
-    - name: Checking application was built
-      run:  |
-            if [[ "${{ env.ORIGINALPROD }}" != "${{ env.NEWPROD}}" ]]
-            then
-              echo You need to build before pushing
-              exit 1
-            else
-              echo Application was correctly pre-built
+            RESULT=$(git status)
+            if [[ $RESULT == *"dist"* ]]; then
+              echo "::set-output name=changes::true"
             fi
+    - name: Checking application was built
+      if: contains(steps.git.outputs.result, 'true')
+      run:  |
+            echo You need to build before pushing
+            exit 1
