--- a/.github/workflows/front-end-build.yml
+++ b/.github/workflows/front-end-build.yml
@@ -33,6 +33,15 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
+    - name: Checks git status
+      id: preGit
+      run:  |
+            RESULT=$(git status)
+            if [[ $RESULT == *"/dist"* ]]; then
+              echo There have been changes
+              echo $RESULT
+              echo "::set-output name=changes::true"
+            fi
     - name: Installs dependencies
       run: npm install
       working-directory: ./src/front-end
