moves build to server and fixes CORS

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,9 @@ jobs:
           mv constants_prod.js constants.js
           PATH=$PATH:/${{secrets.SSH_USERNAME}}/.nvm/versions/node/v16.14.2/bin
           npm install
-          cd ../front-end/prod
+          cd ../front-end
+          npm install
+          npm run build
+          cd ./prod
           npm install
           echo 'Deployed to DigitalOcean'
