--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,7 @@ jobs:
 
         script: |
           cd ../var/www/boojo.bitfrost.app/cse112-sp22-group1
+          git reset --hard origin/main
           git pull origin main
           cd  src/back-end
           rm constants.js
