--- a/src/back-end/package.json
+++ b/src/back-end/package.json
@@ -12,6 +12,7 @@
     "crypto-js": "^4.0.0",
     "dotenv": "^9.0.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.3",
     "mongoose": "^5.12.7",
     "nodemon": "^2.0.7"
   },
