--- a/src/unitTests/package.json
+++ b/src/unitTests/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.14.3",
+    "@babel/plugin-syntax-jsx": "^7.17.12",
+    "@babel/plugin-transform-react-jsx": "^7.17.12",
     "@babel/preset-env": "^7.14.4",
     "babel-jest": "^26.6.3",
     "jest": "^26.6.3",
