front-end/router: updates router to use navigo
Updates the frontend routing to use more conventional routes. While
hash-based routing is still used, routes now look more like standard
URIs.

The new routes are:
/dailyLog/:id
/monthlyLog/:id
/futureLog/:id
/collection/:id
Which look like boojo.app/#/dailyLog/BCykNlF2a4MCiIvKfQJCaC66JvzEZg

The router.js file is refactored to only export the Navigo router
object. This is needed in some cases to change the route using
javascript. The preferred way to change the route will always be using
HTML. The way to do this is by using the <a> element with the
data-navigo attribute.

Example:
<a href="/dailyLog/BCykNlF2a4MCiIvKfQJCaC66JvzEZg" data-navigo>

Link to the Navigo documentation:
https://github.com/krasimir/navigo/blob/master/DOCUMENTATION.md

--- a/src/front-end/package.json
+++ b/src/front-end/package.json
@@ -12,7 +12,8 @@
   "author": "CSE 110 Team 11",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "navigo": "^8.11.1"
   },
   "devDependencies": {
     "@babel/core": "^7.14.3",
