--- a/src/front-end/package.json
+++ b/src/front-end/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "jest",
+    "endtoend": "jest --config=./jestendtoend.config.js",
     "start": "nodemon server.js",
     "dev": "webpack serve --config webpack.dev.js --open --hot",
     "build": "webpack --config webpack.prod.js"
@@ -38,9 +39,5 @@
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.8.1",
     "webpack-merge": "^5.8.0"
-  },
-  "jest": {
-    "preset": "jest-puppeteer",
-    "verbose": true
   }
 }
