back-end/test/eslintrc: makes eslintrc ignore jest globals
The previous implementation of this whitelisted globals by hand, but
this makes it so eslint ignores all jest globals.

--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "description": "This is the repository for team 11's CSE 110 project.   Team Name: It's not a bug, It's a feature",
   "version": "1.0.0",
   "main": ".eslintrc.js",
-  "dependencies": {},
   "scripts": {
     "jsdoc": "jsdoc -c jsdoc.json",
-	"lint": "./node_modules/.bin/eslint ./src/back-end ./src/front-end -c ./.eslintrc.js --ignore-path ./.eslintignore",
+    "lint": "./node_modules/.bin/eslint ./src/back-end ./src/front-end -c ./.eslintrc.js --ignore-path ./.eslintignore",
     "lintFix": "./node_modules/.bin/eslint --fix ./src/back-end ./src/front-end -c ./.eslintrc.js --ignore-path ./.eslintignore"
   },
   "repository": {
@@ -26,6 +25,7 @@
     "eslint": "^7.26.0",
     "jest": "^27.0.4",
     "jest-puppeteer": "^5.0.3",
+    "eslint-plugin-jest": "^26.4.6",
     "jsdoc": "^3.6.10",
     "puppeteer": "^9.1.1"
   },
