--- a/src/front-end/package.json
+++ b/src/front-end/package.json
@@ -4,7 +4,7 @@
   "description": "This is the front-end for CSE 110 Spring 2021 Team 11",
   "main": "server.js",
   "scripts": {
-    "test": "jest --coverage --detectOpenHandles --config=./jestUnit.config.js",
+    "test": "jest --config=./jestUnit.config.js --coverage --detectOpenHandles",
     "endtoend": "jest --coverage --detectOpenHandles --config=./jestendtoend.config.js",
     "start": "nodemon server.js",
     "dev": "webpack serve --config webpack.dev.js --open --hot",
@@ -43,22 +43,5 @@
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.8.1",
     "webpack-merge": "^5.8.0"
-<<<<<<< HEAD
-=======
-  },
-  "jest": {
-    "preset": "jest-puppeteer",
-    "verbose": true,
-    "transform": {
-      "\\.[jt]sx?$": "babel-jest"
-    },
-    "globals": {
-      "window": {
-        "location": {
-          "hostname": "localhost:8080"
-        }
-      }
-    }
->>>>>>> 67475e8 (front-end/crud:)
   }
 }
