Tests buld adds fake env for testing

--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -27,6 +27,8 @@ jobs:
     strategy:
       matrix:
         node-version: [16.x]
+    env:
+      MONGODB_URI: ${{MONGODB_URI}}
     steps:
     - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
@@ -35,6 +37,8 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm install
       working-directory: ./src/back-end
+    - run: echo "DB=$MONGODB_URI\nSESSION_SECRET=ARandomlyGeneratedStringOfCharactersToKeepSecret\nHASHKEY=workflowkey" >> .env
+      workign-directory: ./src/back-end
     - run: node index.js
       working-directory: ./src/back-end
     - run: npm test --if-present -- localStorage
