--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -38,7 +38,7 @@ jobs:
     - run: npm install
       working-directory: ./src/back-end
     - run: echo "DB=$MONGODB_URI\nSESSION_SECRET=ARandomlyGeneratedStringOfCharactersToKeepSecret\nHASHKEY=workflowkey" >> .env
-      workign-directory: ./src/back-end
+      working-directory: ./src/back-end
     - run: node index.js
       working-directory: ./src/back-end
     - run: npm test --if-present -- localStorage
